# TAMPL8

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  Dockerfile  README.md
.github/workflows/: .ci.yml.swp  ci.yml
TAMPL3/: .gitignore
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
